<resources>
    <string name="app_name">Remobox</string>

    // Splash
    <string name="selectLng">Select Language</string>
    <string name="next">Next</string>
    <string name="persian">Persian (پارسی)</string>
    <string name="english">English</string>
    <string name="arabic">Arabic (العربية)</string>
    <string name="intro1">تمام تنظیمات به صورت کنترل از راه دور و از طریق وای فای گوشی تلفنتان انجام میشود</string>
    <string name="intro2">طراحی کارپرسند و دارای کاربری بسیار راحت</string>
    <string name="intro3">به جمع مشتریان خرسند سیب سیاه خوش آمدید</string>

    <string name="barcode">یا بارکد دستگاه را اسکن کنید</string>
    <string name="deviceType">کد دستگاه را وارد کنید</string>
    <string name="apply">Apply</string>

    <string name="product_type_1">ساعت دیجیتال دیواری یا رومیزی</string>
    <string name="product_type_2">ساعت و تقویم دیجیتال اداری، بانکی</string>
    <string name="product_type_3">ساعت و تقویم دیجیتال مذهبی</string>
    <string name="product_type_4">دستگاه اذانگو اتوماتیک</string>
    <string name="product_type_5">اسکوربورد دیجیتال ورزشی</string>

    // Main Activity
    <string name="navigation_drawer_open">1</string>
    <string name="navigation_drawer_close">0</string>


    // Main Digital Clock
    <string name="timeDate">Time / Date</string>
    <string name="timer_cor">Stopwatch &amp; Timer</string>
    <string name="temperature">Temp / Humidity</string>


    // Frag Time
    <string name="time">Time</string>
    <string name="reminder">Reminder</string>
    <string name="timeAuto">Set time automatically</string>
    <string name="date">Date</string>
    <string name="timeFormat">Time format</string>
    <string name="save">Save</string>

    <string name="time_12_hour">12-hours(1:00 pm)</string>
    <string name="time_24_hour">24-hours(13:00)</string>

    <string name="addReminder">Add Reminder</string>
    <string name="set_duration">Set duration</string>
    <string name="duration">Duration time (Seconds)</string>
    <string name="delete_ask">Do you want to delete this reminder?</string>
    <string name="duration_remin">duration</string>
    <string name="font_type">font</string>


    // Frag StopWatch
    <string name="timer">CountdownTimer</string>
    <string name="chronometer">Chronometer</string>
    <string name="main_timer">Main Timer</string>
    <string name="sport_mode">Sport Mode</string>
    <string name="rest">Rest</string>
    <string name="rest_sec">Rest(second)</string>
    <string name="round">Laps</string>
    <string name="laps">Laps:</string>
    <string name="dot_seprator">:</string>
    <string name="timer_stopwatch">00:00:00</string>
    <string name="timer_zero">00</string>
    <string name="zero">0</string>
    <string name="timer_flag">--:--:--</string>
    <string name="timer_counter">00:00</string>
    <string name="minutes">minutes</string>
    <string name="second">Second</string>


    // Frag Temp /Humidity
    <string name="degree">Degree Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="temp">Temperature</string>
    <string name="humidity">Humidity</string>
    <string name="calibration">Calibration</string>
    <string name="setPoint">Set Point</string>

    <string name="tempC">Temperature (&#xb0;C)</string>
    <string name="tempF">Temperature (&#xb0;F)</string>
    <string name="humidityP">Humidity (%)</string>
    <string name="degree_symbol">&#xb0;</string>
    

    // Navigation
    <string name="on_off">ON / OFF</string>
    <string name="wifi">Wifi setting</string>
    <string name="bright">Brightness adjustment</string>
    <string name="display">Display setting</string>
    <string name="alarm_setting">Alarm setting</string>
    <string name="language">Language</string>
    <string name="warranty">Warranty</string>
    <string name="application">Application (Download / Help)</string>
    <string name="reset">Reset to factory</string>
    <string name="exit">Exit</string>
    
    <string name="nav_on_off">Are you sure you want to On/Off?</string>
    <string name="wifi_setting">Wifi setting</string>
    <string name="brightness">Brightness</string>
    <string name="display_setting">Display setting</string>
    <string name="reset_factory">Are you sure you want to reset to factory?</string>
    <string name="exit_ask">Are you sure you want to exit?</string>
    <string name="auto_brightness">Auto</string>
    <string name="get_link">Get this link</string>



    

    
    // Motion Toast
    <string name="error">ERROR</string>
    <string name="check_data">Please check your input params.</string>
    <string name="error_input">Insert timer number.</string>




















    <string name="reverseTimer">Reverse Timer</string>
    <string name="stopwatch">Stopwatch</string>
    <string name="sportTimer">Sport Timer</string>
    <string name="speakTimer">Speak Timer</string>

    <string name="onOff">On / Off</string>
    <string name="lightControl">Light intensity adjustment</string>
    <string name="alarm_relay">Alarm sound &amp; relay</string>
    <string name="screenSetting">Screen setting</string>
<!--    <string name="reset">Reset factory</string>-->

    <string name="summerWinter">DST</string>


    <string name="max">Max</string>
    <string name="min">Min</string>
    <string name="calibrate">Calibrate</string>
    <string name="allowedInterval">Allowed Interval</string>

    <string name="dateType1">Hijri</string>
    <string name="dateType2">A.h</string>
    <string name="dateType3">A.D</string>



    <string name="timeMode">Time Mode</string>
    <string name="dateMode">Date Mode</string>
    <string name="dateAhMode">Ah Date</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="auto">Automatic</string>
    <string name="manual">Manual</string>

    <string name="plus">+</string>
    <string name="clock">00:00</string>
<!--    <string name="date">00/00/00</string>-->
    <string name="numOne">+1</string>
    <string name="num15">+15</string>
    <string name="num30">+30</string>

    <string name="centigrade">Centigrade</string>
<!--    <string name="fahrenheit">Fahrenheit</string>-->


</resources>