<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/standard_bottom_sheet"
    style="@style/Widget.Material3.BottomSheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_bottom_sheet_bottom"
        android:background="@drawable/sheet_shape">

        <TextView
            android:id="@+id/lbl_title_sheet_reminder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/font"
            android:text="@string/timeFormat"
            android:textColor="@color/textColor"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lbl_title_sheet_reminder">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radio_12_hour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="false"
                android:fontFamily="@font/font"
                android:gravity="center_vertical|end"
                android:text="@string/time_12_hour"
                android:textColor="@color/textColor"
                android:textSize="16sp"
                app:buttonTint="@color/mainColor" />

            <ImageView
                android:id="@+id/line_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/linear_gradiant" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radio_24_hour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:fontFamily="@font/font"
                android:gravity="center_vertical|end"
                android:text="@string/time_24_hour"
                android:textColor="@color/textColor"
                android:textSize="16sp"
                app:buttonTint="@color/mainColor" />

            <ImageView
                android:id="@+id/line_end_navigation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/linear_gradiant" />
        </RadioGroup>

        <com.github.nikartm.button.FitButton
            android:id="@+id/btn_ok_time_format"
            android:layout_width="60dp"
            android:layout_height="48dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/app_name"
            android:gravity="center"
            app:fb_backgroundColor="#00FFFFFF"
            app:fb_cornerRadius="@dimen/radius"
            app:fb_fontFamilyRes="@font/font"
            app:fb_rippleColor="@color/rippleColor"
            app:fb_shadow="0dp"
            app:fb_shape="rectangle"
            app:fb_text="@string/ok"
            app:fb_textColor="@color/mainColor"
            app:fb_textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

        <com.github.nikartm.button.FitButton
            android:id="@+id/btn_cancel_time_format"
            android:layout_width="60dp"
            android:layout_height="48dp"
            android:layout_marginEnd="6dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/app_name"
            android:gravity="center"
            app:fb_backgroundColor="#00FFFFFF"
            app:fb_cornerRadius="@dimen/radius"
            app:fb_fontFamilyRes="@font/font"
            app:fb_rippleColor="@color/rippleColor"
            app:fb_shadow="0dp"
            app:fb_shape="rectangle"
            app:fb_text="@string/cancel"
            app:fb_textColor="@color/mainColor"
            app:fb_textSize="17sp"
            app:layout_constraintBottom_toBottomOf="@+id/btn_ok_time_format"
            app:layout_constraintEnd_toStartOf="@+id/btn_ok_time_format"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintTop_toTopOf="@+id/btn_ok_time_format"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>

