<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/standard_bottom_sheet"
    style="@style/Widget.Material3.BottomSheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_bottom_sheet_bottom"
        android:background="@drawable/sheet_shape">

        <TextView
            android:id="@+id/lbl_title_navigation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="24dp"
            android:fontFamily="@font/font"
            android:text="@string/set_duration"
            android:textColor="@color/textColor"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/line_end_navigation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lbl_title_navigation">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/box_brightness"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <SeekBar
                    android:id="@+id/seekBar_brightness"
                    style="@style/Widget.AppCompat.SeekBar.Discrete"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:max="4"
                    android:progress="2"
                    android:thumbTint="@color/mainColor"
                    android:progressTint="@color/mainColor"
                    app:layout_constraintBottom_toBottomOf="@+id/checkBox_brightness"
                    app:layout_constraintEnd_toStartOf="@+id/checkBox_brightness"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/checkBox_brightness" />

                <CheckBox
                    android:id="@+id/checkBox_brightness"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/font"
                    android:text="@string/auto_brightness"
                    android:textColor="@color/textLightColor"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toTopOf="@+id/checkBox_brightness"
                    app:layout_constraintEnd_toEndOf="@+id/checkBox_brightness"
                    app:layout_constraintStart_toStartOf="@+id/checkBox_brightness"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/box_display_setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/line_dis_2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:scaleType="centerCrop"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/checkBox_date_display"
                    app:srcCompat="@drawable/linear_gradiant" />

                <ImageView
                    android:id="@+id/line_dis_1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:scaleType="centerCrop"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/checkBox_time_display"
                    app:srcCompat="@drawable/linear_gradiant" />

                <CheckBox
                    android:id="@+id/checkBox_time_display"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/lbl_dis_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/font"
                    android:text="@string/time"
                    android:textColor="@color/textColor"
                    app:layout_constraintBottom_toBottomOf="@+id/checkBox_time_display"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/lbl_dis_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/font"
                    android:text="@string/date"
                    android:textColor="@color/textColor"
                    app:layout_constraintBottom_toBottomOf="@+id/checkBox_date_display"
                    app:layout_constraintStart_toStartOf="@+id/lbl_dis_time"
                    app:layout_constraintTop_toTopOf="@+id/checkBox_date_display" />

                <CheckBox
                    android:id="@+id/checkBox_date_display"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/line_dis_1" />

                <TextView
                    android:id="@+id/lbl_dis_temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/font"
                    android:text="@string/temperature"
                    android:textColor="@color/textColor"
                    app:layout_constraintBottom_toBottomOf="@+id/checkBox_temp_display"
                    app:layout_constraintStart_toStartOf="@+id/lbl_dis_date"
                    app:layout_constraintTop_toTopOf="@+id/checkBox_temp_display" />

                <CheckBox
                    android:id="@+id/checkBox_temp_display"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/line_dis_2" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/box_warranty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_segment_timer"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="@font/font"
                    android:gravity="center"
                    android:text="@string/get_link"
                    android:textColor="@color/mainColor"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:iconGravity="textStart"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:rippleColor="@color/rippleColor"
                    app:strokeColor="#959595" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

        <ImageView
            android:id="@+id/line_end_navigation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toTopOf="@+id/btn_ok_navigation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/linear_gradiant" />

        <com.github.nikartm.button.FitButton
            android:id="@+id/btn_ok_navigation"
            android:layout_width="60dp"
            android:layout_height="48dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/app_name"
            android:gravity="center"
            app:fb_backgroundColor="#00FFFFFF"
            app:fb_cornerRadius="@dimen/radius"
            app:fb_fontFamilyRes="@font/font"
            app:fb_rippleColor="@color/rippleColor"
            app:fb_shadow="0dp"
            app:fb_shape="rectangle"
            app:fb_text="@string/ok"
            app:fb_textColor="@color/mainColor"
            app:fb_textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed" />

        <com.github.nikartm.button.FitButton
            android:id="@+id/btn_cancel_navigation"
            android:layout_width="60dp"
            android:layout_height="48dp"
            android:layout_marginEnd="6dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/app_name"
            android:gravity="center"
            app:fb_backgroundColor="#00FFFFFF"
            app:fb_cornerRadius="@dimen/radius"
            app:fb_fontFamilyRes="@font/font"
            app:fb_rippleColor="@color/rippleColor"
            app:fb_shadow="0dp"
            app:fb_shape="rectangle"
            app:fb_text="@string/cancel"
            app:fb_textColor="@color/mainColor"
            app:fb_textSize="17sp"
            app:layout_constraintBottom_toBottomOf="@+id/btn_ok_navigation"
            app:layout_constraintEnd_toStartOf="@+id/btn_ok_navigation"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintTop_toTopOf="@+id/btn_ok_navigation"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>

